# muse

./: .buildinfo  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  content.html  genindex.html  index.html  intro.html  markdown-notebooks.html  markdown.html  mkdocs.yml  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js  sitemap.xml
.github/workflows/: deploy.yml  release.yml  test.yml
_sources/: intro.md
api/: index.html
docs/: _config.yml  _toc.yml  api.md  index.md  intro.md  notebooks.ipynb  quickstart.md  requirements.txt  test_page.md
examples/binary-mixtures/: binary-mixture.py  run-multiple-mixtures.py  test-seed-2.out  test-seed-3.out
examples/binary-mixtures/NaCl-KCl/Cl14K8Na6/: 0-packmol-mixture.xyz  1-lj-relaxed.xyz
examples/binary-mixtures/NaCl-KCl/Cl14K8Na6/T_1100.0-P_0.0-seed_1/: INCAR  OSZICAR  POSCAR  XDATCAR  vasp.out
examples/binary-mixtures/NaCl-KCl/Cl14K8Na6/T_1100.0-P_0.0-seed_2/: INCAR  OSZICAR  POSCAR  XDATCAR  vasp.out
examples/binary-mixtures/NaCl-KCl/Cl14K8Na6/T_1100.0-P_0.0-seed_3/: KPOINTS  OSZICAR  POSCAR  XDATCAR  vasp.out
lab/: mixture.ipynb  mixture.xyz  packmol.inp  packmol.stdout  packmol_H2F2.xyz  packmol_Na6Cl6.xyz  packmol_U2Cl6.xyz  packmol_out.xyz  relaxed.xyz
muse/: __init__.py  utils.py
muse/calcs/: __init__.py  density.py  utils.py
muse/io/: __init__.py  mptrj.py
muse/jobs/: __init__.py  slurm.py
muse/plots/: __init__.py  _utils.py  density.py  pd.py  volume.py
muse/transforms/: __init__.py  mixture.py
quickstart/: index.html
scripts/: install-packmol.sh
search/: search_index.json
tests/: binary-mixture-test.py  conftest.py  test_io.py  test_mixture.py  test_plots.py
